# cpp-practise

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
cmake/: message.cmake
src/: client.cpp  convert.cpp  server.cpp
